--- a/labs/unit_02/express/recipes-app/package.json
+++ b/labs/unit_02/express/recipes-app/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "pirate-joke",
+  "name": "recipes-app",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "eric jonelunas",
   "license": "ISC",
   "dependencies": {
-    "node-notifier": "^5.1.2"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "hbs": "^4.0.1"
   }
 }
