--- a/labs/unit_02/mongo/express-mongoose-lesson-starter/package.json
+++ b/labs/unit_02/mongo/express-mongoose-lesson-starter/package.json
@@ -1,16 +1,18 @@
 {
   "name": "express-mongoose-lesson-starter",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "hbs": "^4.0.1",
     "mongoose": "^4.6.1"
-  }
+  },
+  "description": ""
 }
